--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span></span>
     </div>
     <div class="description">
-      <span>Tengo un regalo especial para ti señorita!!</span>
+      <span>Tengo un regalo especial para ti señorita jeje!!</span>
     </div>
     <div class="button">
       <button>
