--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="button">
       <button>
-        <a href="FLORES.html">Haga Clic</a>
+        <a href="FLORES.html">Tome Su Regalito :D</a>
       </button>
     </div>
   </body>
