--- a/index.html
+++ b/index.html
@@ -16,19 +16,30 @@
       <span>A</span>
     </div>
     <div class="greetings">
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
+      <span>B</span>
+      <span>U</span>
+      <span>E</span>
+      <span>N</span>
+      <span>A</span>
+      <span>S</span>
     </div>
     <div class="description">
-      <span>Tengo un regalo especial para ti señorita jeje!!</span>
+      <span>Le tengo una sorpresa Señorita</span>
+
+      <div class="center-message">
+        <p>
+          Espero le guste este presente, para que no sea espectadora el dia de
+          hoy jeje, tal vez no sea fisico pero al menos que sea virtual no? y
+          bueno perdon por la demora ya sabe eh estado demasiado ocupado. espero
+          le guste y aprecielo porque no sabe lo que me costo que le quede bien
+          en telefono jaja
+        </p>
+      </div>
     </div>
+    De: Alvaro / Para: Daliana
     <div class="button">
       <button>
-        <a href="FLORES.html">Tome Su Regalito :D</a>
+        <a href="FLORES.html">Tome y ps espero le guste</a>
       </button>
     </div>
   </body>
