--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="center-message">
         <p>
           Espero le guste este presente, para que no sea espectadora el dia de
-          hoy jeje, tal vez no sea fisico pero al menos que sea virtual no? y
+          hoy jeje, tal vez no sea fisico pero al menos que sera virtual no? y
           bueno perdon por la demora ya sabe eh estado demasiado ocupado. espero
           le guste y aprecielo porque no sabe lo que me costo que le quede bien
           en telefono jaja
