--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
       <div class="center-message">
         <p>
           Espero le guste este presente, para que no sea espectadora el dia de
-          hoy jeje, tal vez no sea fisico pero al menos que sera virtual no? y
-          bueno perdon por la demora ya sabe eh estado demasiado ocupado. espero
-          le guste y aprecielo porque no sabe lo que me costo que le quede bien
-          en telefono jaja
+          hoy de las flores amarillas jeje, tal vez no sea fisico pero al menos
+          que es virtual no? y la intencion es lo que cuenta. y bueno perdon por
+          la demora ya sabe eh estado demasiado ocupado. espero le guste y
+          aprecielo porque no sabe lo que me costo que le quede bien en telefono
+          jaja na mentira si le gusto pues perfecto y si no pues nrmal :)
         </p>
       </div>
     </div>
